# pico-tmc2209

./: .gitignore  CMakeLists.txt  README.md  openocd.cfg
inc/: pins_pico_board.h  project_config.h
lib/: CMakeLists.txt
lib/TMC2209/: CMakeLists.txt  tmc2209.cpp  tmc2209.h
lib/flash/: CMakeLists.txt  flash.cpp  flash.h
lib/utils/: CMakeLists.txt  functions.cpp  functions.h
src/: CMakeLists.txt  main.cpp
